deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw7
  namespace: apps
spec:
  selector:
    app: hw7
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
